<resources>
    <string name="app_name">Capstone</string>
    <string name="def">Definitions : </string>
    <string name="syn">Synonyms : </string>
    <string name="ant">Antonyms : </string>
    <string name="search_bar">Search word</string>
    <string name="search">Search</string>
    <string name="home">Home</string>
    <string name="bookmark">Bookmark</string>
    <string name="history">History</string>
    <string name="settings">Settings</string>
    <string name="username">Username</string>
    <string name="username2">Username:</string>
    <string name="register">Register</string>
    <string name="password">Password</string>
    <string name="password2">Enter your new password</string>
    <string name="password3">Change password</string>
    <string name="logout">Logout</string>

    <string name="login">Login</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>