<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/dp_16"
    tools:context=".user.RegisterActivity">

    <EditText
        android:id="@+id/etRegisterUsername"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_100"
        android:hint="@string/username"
        android:inputType="text"
        android:padding="@dimen/dp_12"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <Button
        android:id="@+id/btnRegisterSubmit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_8"
        android:text="@string/register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etRegisterPassword" />

    <EditText
        android:id="@+id/etRegisterPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_24"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="@dimen/dp_12"
        android:drawableEnd="@drawable/ic_closed_eye"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etRegisterUsername" />


    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="@dimen/dp_160"
        android:layout_height="@dimen/dp_130"
        android:layout_marginTop="@dimen/dp_160"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_dictionary" />

</androidx.constraintlayout.widget.ConstraintLayout>
