<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".user.SettingsActivity">

    <ImageView
        android:id="@+id/ic_user"
        android:layout_width="@dimen/dp_160"
        android:layout_height="@dimen/dp_130"
        android:layout_marginTop="@dimen/dp_32"
        android:src="@drawable/ic_user"
        app:layout_constraintBottom_toTopOf="@id/tv_username"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/tv_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_16"
        android:layout_marginTop="@dimen/dp_320"
        android:text="@string/username2"
        android:textSize="@dimen/sp_18"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="0dp"
        android:layout_height="@dimen/dp_48"
        android:layout_marginStart="@dimen/dp_8"
        android:layout_marginEnd="@dimen/dp_48"
        android:hint="@string/password2"
        android:inputType="textPassword"
        app:layout_constraintEnd_toStartOf="@id/ic_eye"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_username" />

    <TextView
        android:id="@+id/tv_password_display"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_12"
        android:layout_marginTop="@dimen/dp_150"
        android:text=""
        android:textSize="@dimen/sp_18"
        app:layout_constraintStart_toEndOf="@id/et_password"
        app:layout_constraintTop_toBottomOf="@+id/ic_user" />

    <ImageView
        android:id="@+id/ic_eye"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/dp_16"
        android:layout_marginTop="@dimen/dp_8"
        android:src="@drawable/ic_closed_eye"
        android:contentDescription="Show/Hide password"
        app:layout_constraintBottom_toBottomOf="@id/et_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/et_password" />

    <Button
        android:id="@+id/btn_change_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_16"
        android:layout_marginBottom="@dimen/dp_20"
        android:text="@string/password3"
        app:layout_constraintBottom_toTopOf="@+id/btn_logout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_password" />

    <Button
        android:id="@+id/btn_logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_20"
        android:text="@string/logout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_change_password" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dp_16"
        android:background="@drawable/rounded_corner"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/ic_eye"
        app:layout_constraintStart_toStartOf="@+id/tv_username"
        app:menu="@menu/bottom_nav_menu" />


</androidx.constraintlayout.widget.ConstraintLayout>