<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="@dimen/dp_16"
    android:layout_marginVertical="@dimen/dp_8"
    android:background="@drawable/rounded_corner"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/tvSpeech"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="@dimen/sp_20"
        android:textColor="@color/green"
        tools:text="noun"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tvDefinitionsHeader"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:text="@string/def"
        android:textSize="@dimen/sp_16"
        android:layout_marginTop="@dimen/dp_8"
        app:layout_constraintTop_toBottomOf="@id/tvSpeech"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tvDefinitions"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        tools:text="1 bla \n\n 2 bla \n\n 3 bla"
        app:layout_constraintTop_toBottomOf="@id/tvDefinitionsHeader"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tvSynonymsHeader"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:text="@string/syn"
        android:textSize="@dimen/sp_16"
        android:layout_marginTop="@dimen/dp_8"
        app:layout_constraintTop_toBottomOf="@id/tvDefinitions"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tvSynonyms"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        tools:text="bla"
        app:layout_constraintTop_toBottomOf="@id/tvSynonymsHeader"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tvAntonymsHeader"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:text="@string/ant"
        android:textSize="@dimen/sp_16"
        android:layout_marginTop="@dimen/dp_8"
        app:layout_constraintTop_toBottomOf="@id/tvSynonyms"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tvAntonyms"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        tools:text="bla"
        app:layout_constraintTop_toBottomOf="@id/tvAntonymsHeader"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>